--- a/style.css
+++ b/style.css
@@ -332,3 +332,109 @@
     background-size: contain;
 
 }
+
+
+
+
+/* main-content-page2 after clicking */
+.main-content-page2{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+   
+    width: 72%;
+    margin: 2rem 1rem;
+}
+
+.center-box{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    border: 1px solid black;
+    width: 85%;
+    margin: 0 auto;
+    padding: 1rem;
+    background-color: #f8eaba;
+     
+
+}
+
+.bitcoin-box{
+    display: flex;
+    justify-content: space-between;
+}
+
+.center-para{
+    margin-right:1rem ;
+}
+
+.bird-box{
+    display: flex;
+    justify-content: space-between;
+    background-color: whitesmoke;
+    height: 2rem;
+    border: 1px solid black;
+    padding: 1px 0.5rem;
+    align-items: center;
+}
+
+.spaker-box{
+    display: flex;
+    gap: 1rem;
+    justify-content: space-between;
+}
+
+
+
+ 
+    
+.wikipedia-underline:hover{
+    text-decoration: underline;
+    cursor: pointer;
+    color: rgb(12, 134, 255); 
+    font-size: 1rem;
+}
+
+.wikipedia-underline{
+    color: rgb(12, 134, 255); 
+    font-size: 1rem;
+
+}
+.underline-effect:hover{
+    text-decoration: underline;
+    cursor: pointer;
+}
+
+
+
+/* paragraph-box-box */
+
+.paragraph-box-box{
+    display: flex;
+    gap: 1rem; 
+}
+
+.paragraph-box{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
+
+.block-box{
+    background-color: #f8eaba;
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: center;
+    gap: 0.5rem;
+    padding: 1rem 0px;
+    border: 1px solid rgb(205, 205, 205);
+}
+
+.main-content-page-hide{
+    display: none;
+}
+
+.main-content-page-show{
+    display: block;
+}
